# MsdfFont

./: CMakeLists.txt  cjk.fnt  main.cpp
MSDF/: CMakeLists.txt
MSDF/Debug/Msdfgen.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Msdfgen.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
MSDF/msdfCore/: msdfgen.cpp
core/: CMakeLists.txt  ReadMe.md
core/Android/: JniUtils.cpp  JniUtils.h
core/Kernel/: OVR_Allocator.cpp  OVR_GlUtils.cpp  OVR_GlUtils.h  OVR_Lexer.cpp  OVR_Lexer.h  OVR_LogUtils.cpp  OVR_LogUtils.h  OVR_Math.cpp  OVR_Signal.cpp
